--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-Streamlit==1.32.0
-tensorflow==2.10.0
-numpy==1.26.4
-requests==2.32.3
-protobuf==3.20.3
+Streamlit
+tensorflow
+numpy
+requests
+protobuf
