--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Streamlit
-tensorflow==2.10.0
-numpy
-requests
-protobuf
-python==3.10
+python==3.10.*
+streamlit==1.25.0
+tensorflow==2.14.0
+pillow==9.5.0
+requests==2.31.0
+numpy==1.24.4
